--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,5 @@
 # These individuals contributed to the hbnb project in this repository 
 
-Ezra Nobrega <ezra.nobrega@outlook.com>
-Justin Majetich <justinmajetich@gmail.com>
+Maxius Emmanuel <maxiusemmanueli@gmail.com>
+esbee27 <https://github.com/esbee27/>
+hardope <https://github.com/hardope/>
